# bevy_state_curves

./: Cargo.toml  README.md
crates/bevy_state_curves/: Cargo.toml
crates/bevy_state_curves/benches/: benchmarks.rs
crates/bevy_state_curves/examples/: solar_system.rs
crates/bevy_state_curves/src/: curve_service.rs  curves.rs  helpers.rs  keyframe_trait.rs  lib.rs
