[workspace.package]
authors = ["Noah Shomette <git@noahshomette.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "LICENSE.txt"
documentation = "https://docs.rs/bevy_state_curves"
homepage = "https://github.com/NoahShomette/bevy_state_curves"
repository = "https://github.com/NoahShomette/bevy_state_curves"
description = "A state saving and management crate for the Bevy Game Engine saving via curve keyframes"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["crates/bevy_state_curves"]
# exclude = ["dist", "build", "assets", "credits"]
default-members = ["crates/bevy_state_curves"]
resolver = "2"

[workspace.dependencies]
