[package]
name = "bevy_state_curves"
version = "0.3.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[features]
serde = ["dep:serde"]
type_path = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.12.0", default-features = false }
serde = { version = "1.0.193", optional = true, features = ["derive"] }

[dev-dependencies]
bevy_egui = "0.23.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
bevy = { version = "0.12.0" }
bevy_state_curves = { path = ".", features = ["type_path", "serde"] }

[[bench]]
name = "benchmarks"
harness = false
